--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.2.0",
     "@emotion/react": "^11.13.5",
+    "motion": "^11.13.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
