--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.2.0",
     "@emotion/react": "^11.13.5",
+    "@tanstack/react-query": "^5.62.15",
+    "axios": "^1.7.9",
     "motion": "^11.13.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
