--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     hikari:
       maximum-pool-size: 4
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: update
 
