--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
 }
 
-// apply from: "lint.gradle"
-
 group = 'edu.bbte.licensz.slim2299'
 version = 'unspecified'
 
@@ -24,12 +22,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     runtimeOnly 'com.mysql:mysql-connector-j'
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.1.0'
+    implementation 'com.zaxxer:HikariCP'
 
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
-    // https://mvnrepository.com/artifact/org.projectlombok/lombok
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.34'
-    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1'
 }
