--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,18 @@
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.2.0",
     "@emotion/react": "^11.13.5",
+    "@hookform/resolvers": "^4.0.0",
     "@tanstack/react-query": "^5.62.15",
     "axios": "^1.7.9",
     "motion": "^11.13.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
-    "react-router": "^7.0.2"
+    "react-router": "^7.0.2",
+    "sonner": "^1.7.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
