--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^3.2.0",
     "@emotion/react": "^11.13.5",
     "@hookform/resolvers": "^4.0.0",
+    "@number-flow/react": "^0.5.5",
     "@tanstack/react-query": "^5.62.15",
     "axios": "^1.7.9",
     "motion": "^11.13.1",
