--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,14 @@
     "@number-flow/react": "^0.5.5",
     "@tanstack/react-query": "^5.62.15",
     "axios": "^1.7.9",
+    "i18next": "^24.2.2",
+    "i18next-http-backend": "^3.0.2",
     "motion": "^11.13.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "sonner": "^1.7.4",
