--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.3",
     "react-router": "^7.0.2",
     "sonner": "^1.7.4",
     "zod": "^3.24.2"
