--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'com.github.jknack:handlebars:4.4.0'
+
+
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1'
