--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "motion": "^11.13.1",
     "next-themes": "^0.4.3",
     "react": "^18.3.1",
+    "react-day-picker": "^9.6.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
