--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.3.0
   markdown: ^7.3.0
   flutter_widget_from_html_core: ^0.16.0
+  grayscale: ^0.0.5+7
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
@@ -76,17 +78,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+   - family: Inter
+     fonts:
+       - asset: assets/fonts/Inter.ttc
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
