--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_widget_from_html_core: ^0.16.0
   grayscale: ^0.0.5+7
   flutter_animate: ^4.5.2
+  animations: ^2.0.11
+  skeletonizer: ^1.4.3
+  lorem_ipsum: ^0.0.3
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
