--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   lorem_ipsum: ^0.0.3
   cached_network_image: ^3.4.1
   smooth_counter: ^0.2.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
