Fix Gradle build path in CI workflow to use backend directory

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,4 +13,4 @@ jobs:
                 java-version: '21'
 
             - name: Build with Gradle
-              run: ./gradlew build
+              run: ./backend/gradlew build
