--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -3,14 +3,19 @@ on: [push, pull_request]
 jobs:
     build:
         runs-on: ubuntu-latest
+        defaults: 
+            run:
+                working-directory: ./backend
         steps:
             - name: Checkout
               uses: actions/checkout@v2
 
             - name: Set up JDK 21
-              uses: actions/setup-java@v1
+              uses: actions/setup-java@v2
               with:
                 java-version: '21'
+                distribution: 'temurin'
+                cache: gradle
 
             - name: Build with Gradle
               run: ./backend/gradlew build
