--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,4 +18,4 @@ jobs:
                 cache: gradle
 
             - name: Build with Gradle
-              run: ./backend/gradlew build
+              run: ./gradlew build
