Add ESLint and Gradle CI workflows for frontend and backend

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,5 +1,11 @@
-name: CI
-on: [push, pull_request]
+name: gradle check
+on:
+    push:
+      paths:
+        - 'backend/**'
+    # pull_request:
+    #   paths:
+    #     - 'backend/**'
 jobs:
     build:
         runs-on: ubuntu-latest
