Made it to only run when changes are pushed to the frontend folder

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,11 +1,11 @@
 name: eslint
-on: [push]
-    # push:
-    #   paths:
-    #     - 'frontend/**'
-    # pull_request:
-    #   paths:
-    #     - 'frontend/**'
+on:
+    push:
+      paths:
+        - 'frontend/**'
+    pull_request:
+      paths:
+        - 'frontend/**'
 jobs:
     lint:
         runs-on: ubuntu-latest
