--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -16,9 +16,9 @@ jobs:
             - name: Node.js setup
               uses: actions/setup-node@v2
               with:
-                node-version: '18'
-                # cache: 'npm'
-                # cache-dependency-path: frontend/package-lock.json
+                node-version: '20'
+                cache: 'npm'
+                cache-dependency-path: frontend/package-lock.json
 
             - name: Install dependencies
               run: npm install
