--- a/tfidfApiServer/requirements.txt
+++ b/tfidfApiServer/requirements.txt
@@ -1,8 +1,9 @@
-numpy>=1.19.0
-scikit-learn>=0.24.0
-pandas>=1.2.0
-nltk>=3.5
-joblib>=1.0.0
-pymysql>=1.1.1
+numpy==1.26.4
+scikit-learn==1.5.1
+pandas==2.2.2
+nltk==3.9.1
+joblib==1.4.2
+pymysql==1.1.1
 Django==5.1.3
 djangorestframework==3.15.2
+cryptography==43.0.0
