Fixed linter issues

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -24,3 +24,7 @@ jobs:
 
       - name: Run ruff
         run: ruff check . && ruff fix .
+
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+            commit_message: 'Style fixes by ruff'
