--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -23,8 +23,4 @@ jobs:
         run: pip install ruff
 
       - name: Run ruff
-        run: ruff check . && ruff fix .
-
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-            commit_message: 'Style fixes by ruff'
+        run: ruff check .
