--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cached_network_image: ^3.4.1
   smooth_counter: ^0.2.0
   flutter_launcher_icons: ^0.14.3
+  dio_cookie_manager: ^3.2.0
 
 dev_dependencies:
   flutter_test:
