--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   smooth_counter: ^0.2.0
   flutter_launcher_icons: ^0.14.3
   dio_cookie_manager: ^3.2.0
+  font_awesome_flutter: ^10.8.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
