--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   dio_cookie_manager: ^3.2.0
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
+  email_validator: ^3.0.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
