--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,16 @@ services:
       - EMAIL=${EMAIL}
       - EMAIL_PASSWORD=${EMAIL_PASSWORD}
       - RECOMMEND=recommendations
-    ports:
-      - 8080:8080
     platform: linux/amd64
     depends_on:
       mysql:
         condition: service_healthy
+    healthcheck:
+      test: "wget --spider http://localhost:8080/actuator/health || exit 1"
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 20s
 
   recommendations:
     build: ./tfidfApiServer
@@ -41,5 +45,15 @@ services:
       - MYSQL_PASSWORD=kerekecske
     platform: linux/amd64
     depends_on:
-      mysql:
+      backend:
+        condition: service_healthy
+
+  frontend:
+    build: ./frontend
+    container_name: frontend
+    ports:
+      - 8080:8080
+    platform: linux/amd64
+    depends_on:
+      backend:
         condition: service_healthy
