--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,4 +39,6 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.4.6'
 }
