--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -36,14 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   markdown: ^7.3.0
-  flutter_widget_from_html_core: ^0.16.0
+  flutter_widget_from_html_core: ^0.17.0
   grayscale: ^0.0.5+7
   flutter_animate: ^4.5.2
   animations: ^2.0.11
-  skeletonizer: ^1.4.3
+  skeletonizer: ^2.1.0+1
   lorem_ipsum: ^0.0.3
   cached_network_image: ^3.4.1
-  smooth_counter: ^0.2.0
+  smooth_counter: ^1.0.0
   flutter_launcher_icons: ^0.14.3
   dio_cookie_manager: ^3.2.0
   font_awesome_flutter: ^10.8.0
@@ -60,7 +60,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
