--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,38 +13,38 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^3.2.0",
-    "@emotion/react": "^11.13.5",
-    "@hookform/resolvers": "^4.0.0",
-    "@number-flow/react": "^0.5.5",
-    "@tanstack/react-query": "^5.62.15",
-    "axios": "^1.7.9",
-    "i18next": "^24.2.2",
+    "@emotion/react": "^11.14.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@number-flow/react": "^0.5.10",
+    "@tanstack/react-query": "^5.90.5",
+    "axios": "^1.12.2",
+    "i18next": "^25.6.0",
     "i18next-http-backend": "^3.0.2",
-    "motion": "^11.13.1",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
-    "react": "^18.3.1",
-    "react-day-picker": "^9.6.3",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
-    "react-i18next": "^15.4.0",
+    "react": "^19.2.0",
+    "react-day-picker": "^9.11.1",
+    "react-dom": "^19.2.0",
+    "react-hook-form": "^7.65.0",
+    "react-i18next": "^16.2.1",
     "react-icons": "^5.5.0",
-    "react-markdown": "^9.0.3",
-    "react-router": "^7.0.2",
-    "sonner": "^1.7.4",
-    "zod": "^3.25.76"
+    "react-markdown": "^10.1.0",
+    "react-router": "^7.9.4",
+    "sonner": "^2.0.7",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.11.0",
-    "vite": "^6.2.6",
-    "vite-tsconfig-paths": "^5.1.3"
+    "@eslint/js": "^9.38.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.4.0",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "vite": "7.1.11",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
